Restructured project and added openapi.